# notes-rs

./: .gitignore  .travis.yml  Cargo.toml  Cargo.toml~  README.md  backup  migrate.sql  schema.sql  test  test.db
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: config.rs  db.rs  models.rs
src/: '  app.rs  config.rs  db.rs  display.rs  errors.rs  main.rs  models.rs  notes.rs  print.rs  queries.rs  table.rs  tags.rs  term.rs  util.rs
src/notes/: mod.rs  note.rs  notes.rs
tests/: app.rs  tests.rs
