[package]
authors = ["Liam Woodward <liamowoodward@gmail.com>"]
edition = "2018"
name = "notes"
version = "0.2.1"

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
chrono = { version = "0.4.10", features = ["serde"] }
console = "0.11.3"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
thiserror = "1.0.18"
