[package]
name = "notes-rs"
version = "0.2.1"
authors = ["Liam Woodward <liamowoodward@gmail.com>"]
repository = "https://github.com/alidiusk/notes-rs"
keywords = ["notes", "cli"]
categories = ["command-line-utilities"]
description = """
Notes is a simple command line notes application for storing quick, short notes.
"""
readme = "README.md"
license-file = "LICENSE"
license = "GPLv3"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
chrono = { version = "0.4.10", features = ["serde"] }
dialoguer = "0.6.2"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.18"
prettytable-rs = "0.8.0"
heck = "0.3.1"
clap = "2.33.1"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
predicates = "1.0.4"
